Update loom and junit

--- a/gradle.properties
+++ b/gradle.properties
@@ -22,5 +22,7 @@ preen_version = 1.1.+
 nester_version = 1.4.+
 jgit_version = 7.+
 vineflower_version = 1.11.+
-loom_version = 1.13.+
+loom_version = 1.14.+
 unpick_version = 3.+
+
+junit_version=5.14.+
