--- a/build.gradle
+++ b/build.gradle
@@ -59,11 +59,11 @@ dependencies {
 
 	// Loader and its deps
 	implementation "net.fabricmc:fabric-loader:${fabric_loader_version}"
-	implementation "org.ow2.asm:asm:${project.asm_version}"
-	implementation "org.ow2.asm:asm-analysis:${project.asm_version}"
-	implementation "org.ow2.asm:asm-commons:${project.asm_version}"
-	implementation "org.ow2.asm:asm-tree:${project.asm_version}"
-	implementation "org.ow2.asm:asm-util:${project.asm_version}"
+	implementation "org.ow2.asm:asm:${asm_version}"
+	implementation "org.ow2.asm:asm-analysis:${asm_version}"
+	implementation "org.ow2.asm:asm-commons:${asm_version}"
+	implementation "org.ow2.asm:asm-tree:${asm_version}"
+	implementation "org.ow2.asm:asm-util:${asm_version}"
 
 	implementation("net.ornithemc:stitch:${stitch_version}") {
 		exclude module: 'enigma'
@@ -74,6 +74,7 @@ dependencies {
 	implementation "net.fabricmc:access-widener:${access_widener_version}"
 	implementation "net.fabricmc:mapping-io:${mappingio_version}"
 	implementation "net.fabricmc:fabric-loom:${loom_version}"
+	libImplementation "net.fabricmc:fabric-loom:${loom_version}"
 	implementation "net.fabricmc.unpick:unpick:${unpick_version}"
 	implementation "net.fabricmc.unpick:unpick-format-utils:${unpick_version}"
 
@@ -95,8 +96,8 @@ dependencies {
 	implementation "org.vineflower:vineflower:${vineflower_version}"
 
 	// Testing
-	testImplementation(platform("org.junit:junit-bom:5.13.+"))
-	testImplementation("org.junit.jupiter:junit-jupiter:5.13.+")
+	testImplementation(platform("org.junit:junit-bom:${junit_version}"))
+	testImplementation("org.junit.jupiter:junit-jupiter:${junit_version}")
 }
 
 // if not working: run ./gradlew run --refresh-dependencies
