--- a/gradle.properties
+++ b/gradle.properties
@@ -6,21 +6,23 @@ group = com.github.winplay02.gitcraft
 version = 0.3.0-SNAPSHOT
 
 # GitCraft Dependencies
-groovy_version = 4.0.+
+groovy_version = 5.0.+
 gson_version = 2.+
 fabric_loader_version = 0.18.+
 asm_version = 9.+
 stitch_version = 0.22.+
-tiny_remapper_version = 0.11.+
+tiny_remapper_version = 0.12.+
 access_widener_version = 2.+
-mappingio_version = 0.7.+
+mappingio_version = 0.8.+
 lorenz_tiny_version = 4.+
 condor_version = 1.4.+
 exceptor_version = 1.1.+
-signature_changer_version = 1.0+
-preen_version = 1.1+
+signature_changer_version = 1.0.+
+preen_version = 1.1.+
 nester_version = 1.4.+
 jgit_version = 7.+
 vineflower_version = 1.11.+
-loom_version = 1.+
+loom_version = 1.14.+
 unpick_version = 3.+
+
+junit_version=6.0.+
